1.3.13
	+ Show the email address is available to authenticate with
	+ Fix EBox::RemoteServices::Model::viewCustomizer to return always
	  a customizer instance to match the new API
1.3.12
	+ Passwordless from Control Center is now the default option and
	  it is not editable from GUI anynmore
	+ Run cron getter after subscribing while saving changes
	+ Configure/enable OpenVPN module when subscribing
	+ Add widget to know the Control Center connection status
	+ Add support for automatic backups done daily for a maximum number
	+ Allow job result submission to be sent in chunks
1.3.10
	+ Bugfix: Using a better message when the Internet is not
	  reachable when subscribing an eBox
	+ Bugfix: Use name in VPN client configuration for reaching the
	  VPN server to avoid problems if we change the IP addresses
	+ Bugfix: Better error handling in notify job results
	+ Bugfix: Using ebox as common base for Via protocol
1.3.7
	+ Bugfix: Add CACertificatePath to trust in CC job dispatchers
1.3.6
	+ Run cronjob sent by eBox CC
1.1.20
	+ New release
1.1
	+ Initial release