@@ -29,6 +29,13 @@ use warnings;
 ## eBox uses
 use EBox::Gettext;
 
+# Constants
+use constant {
+  EBOX_SERVICES_URL => 'http://www.ebox-technologies.com/products/controlcenter/try/'
+                       . '?utm_source=ebox&utm_medium=ebox&utm_content=remoteservices'
+                       . '&utm_campaign=register',
+};
+
 # Group: Public methods
 
 # Constructor: new
@@ -60,6 +67,7 @@ sub new
 #
 sub _description
 {
+    my $printableName = __('eBox Control Center');
 
     my $description =
       {
@@ -70,9 +78,12 @@ sub _description
           layout          => 'top-bottom',
           name            => 'General',
           compositeDomain => 'RemoteServices',
-          printableName   => __('Remote services'),
-          help            => __('eBox Control Center is paid services to '
-                                . 'enhance your eBox experience'),
+          printableName   => $printableName,
+          pageTitle       => $printableName,
+          help            => __x(' {openhref}Subscribing{closehref} your eBox to the Control Center '
+                                 . 'lets you have automatic configuration backup and much more',
+                                 openhref  => '<a href="' . EBOX_SERVICES_URL . '">',
+                                 closehref => '</a>'),
       };
 
     return $description;
