@@ -1,3 +1,6 @@
+HEAD
+	+ Fix some misleading text to use coherent discourse
+	+ Set the link to the new subscription form in eBox Tech website 
 1.3.13
 	+ Show the email address is available to authenticate with
 	+ Fix EBox::RemoteServices::Model::viewCustomizer to return always
